test/fail/simvar-assign-t.rnp
(X:Y, boolean) = 1;
---
 --> fail/simvar-assign-t.rnp:1:18
  |
1 | (X:Y, boolean) = 1;
  |                  ^ Expected boolean but got number
  |
